test/semantic_errors/invalid_binaryop11.mc
void main() {
    int res;
    int a;
    char b;
    res = a * b; /* cannot multiply int with char */
}